# myRAG

./: .gitignore  LICENSE  README.md  control_plane_design.md  evaluation_benchmark.md  project_spec.md  pyproject.toml  rag_experiment_plan.md
benchmarks/: sample_benchmark.yaml
examples/sample_corpus/: blog_essay.md  feishu_github_tutorial.md  great_expectations_book_note.md  linux_shell_note.md  material_longform.md
src/myrag/: __init__.py  cli.py  config.py  control.py  corpus.py  models.py  rag.py  runtime.py
src/myrag/api/: app.py
tests/: test_api.py  test_control.py  test_corpus.py  test_rag.py
